fixed a slight issue with h1 getting shifted down

--- a/src/global.css
+++ b/src/global.css
@@ -20,9 +20,9 @@ body {
   -moz-tab-size: 4;
   -o-tab-size: 4;
   tab-size: 4;
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Ubuntu", sans-serif !important;
   color: white;
-  background-color: #21282a;
+  background-color: #21282a !important;
   margin: 0;
   padding: 0;
 }
